# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name                                    = "json-spanned-value"
version                                 = "0.0.0-git"
authors                                 = ["MaulingMonkey <git@maulingmonkey.com>"]
repository                              = "https://github.com/MaulingMonkey/json-spanned-value.git"
documentation                           = "https://docs.rs/json-spanned-value/"
edition                                 = "2018"
license                                 = "Apache-2.0 OR MIT"
readme                                  = "Readme.md"
description                             = "Track the origin of your json values for better error reporting!"
keywords                                = ["json", "serde", "serialization", "spans"]
categories                              = ["encoding"]
exclude                                 = [".vscode/*"]

[badges]
travis-ci                               = { repository = "MaulingMonkey/json-spanned-value", branch = "master" }

[features]
default                                 = []
preserve_order                          = ["indexmap"]

[dependencies]
indexmap                                = { version = "1.3", optional = true }
serde                                   = "1.0"
serde_json                              = "1.0"

[dev-dependencies]
serde                                   = { version = "1.0", features = ["derive"] }
codespan-reporting                      = "0.9.5"

[package.metadata.docs.rs]
all-features                            = true
targets                                 = ["x86_64-unknown-linux-gnu"]
